--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -26,7 +26,7 @@ modules:
         npm_config_cache: /run/build/librelinkupdesktop/flatpak-node/npm-cache
         npm_config_offline: "true"
     build-commands:
-      - npm install --offline
+      - npm install --legacy-peer-deps --offline
       - ./flatpak-node/electron-builder-arch-args.sh
       - npx ts-node ./.erb/scripts/clean.js dist && npm run build && npx electron-builder --linux --dir $ELECTRON_BUILDER_ARCH_ARGS
       - cp -a release/build/linux*unpacked /app/main
