--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -36,9 +36,9 @@ modules:
       - install -Dm444 flathub/rocks.poopjournal.librelinkupdesktop.metainfo.xml /app/share/metainfo/rocks.poopjournal.librelinkupdesktop.metainfo.xml
     sources:
       - type: git
-        url: https://github.com/fperera123/LibreLinkUpDesktop.git
-        tag: flathub-22
-        commit: 0250d08bceecf8da604ac8094a2a853ecbddc392
+        url: https://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
+        tag: v0.1.10
+        commit: 600362e
       - generated-sources.json
       - type: script
         dest-filename: run.sh
