--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -36,9 +36,9 @@ modules:
       - install -Dm444 flathub/rocks.poopjournal.librelinkupdesktop.metainfo.xml /app/share/metainfo/rocks.poopjournal.librelinkupdesktop.metainfo.xml
     sources:
       - type: git
-        url: https://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
-        tag: v0.1.10
-        commit: 600362ea042bbb078a5012161c4287e98f7e0393
+        url: https://github.com/fperera123/LibreLinkUpDesktop.git
+        tag: flathub-0.1.21
+        commit: 383036e52d257bccf8d5603630b9a0fd562b6380
       - generated-sources.json
       - type: script
         dest-filename: run.sh
