--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -36,9 +36,9 @@ modules:
       - install -Dm444 flathub/rocks.poopjournal.librelinkupdesktop.metainfo.xml /app/share/metainfo/rocks.poopjournal.librelinkupdesktop.metainfo.xml
     sources:
       - type: git
-        url: https://github.com/fperera123/LibreLinkUpDesktop.git
-        tag: flathub-0.1.21
-        commit: 383036e52d257bccf8d5603630b9a0fd562b6380
+        url: hhttps://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
+        tag: v0.1.11
+        commit: c274231ea0bfcef3b763f61f65a150bb3d26e22a
       - generated-sources.json
       - type: script
         dest-filename: run.sh
