--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -36,7 +36,7 @@ modules:
       - install -Dm444 flathub/rocks.poopjournal.librelinkupdesktop.metainfo.xml /app/share/metainfo/rocks.poopjournal.librelinkupdesktop.metainfo.xml
     sources:
       - type: git
-        url: hhttps://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
+        url: https://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
         tag: v0.1.11
         commit: c274231ea0bfcef3b763f61f65a150bb3d26e22a
       - generated-sources.json
