--- a/rocks.poopjournal.librelinkupdesktop.yml
+++ b/rocks.poopjournal.librelinkupdesktop.yml
@@ -37,8 +37,8 @@ modules:
     sources:
       - type: git
         url: https://github.com/Crazy-Marvin/LibreLinkUpDesktop.git
-        tag: v0.1.11
-        commit: c274231ea0bfcef3b763f61f65a150bb3d26e22a
+        tag: v13-1
+        commit: 90cac65dea623e55cd8dc9d136a790642bef73b8
       - generated-sources.json
       - type: script
         dest-filename: run.sh
